samples/_failures_safe/1761275525_a23f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acaa41d2.c: In function ‘main’:
./samples/SAFE/__tmp_acaa41d2.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix(&result, "A+B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_acaa41d2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acaa41d2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acaa41d2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acaa41d2.c:156:21: error: expected declaration or statement at end of input
